a.txt
g++ scanner.o definiciones.o lex.yy.c parser.tab.c ast.cpp -o ContBot
In file included from lexer.l:2:0:
ast.h: In member function 'virtual void identificador::add_variable(int, bool)':
ast.h:631:31: error: invalid user-defined conversion from 'variable**' to 'const variable&' [-fpermissive]
     head_table->valores["me"] = &temp;
                               ^
In file included from lexer.l:2:0:
ast.h:47:3: note: candidate is: variable::variable(int) <near match>
   variable(int ty): tipo(ty) {};
   ^
ast.h:47:3: note:   no known conversion for argument 1 from 'variable**' to 'int'
In file included from lexer.l:2:0:
ast.h:631:31: error: invalid conversion from 'variable**' to 'int' [-fpermissive]
     head_table->valores["me"] = &temp;
                               ^
In file included from lexer.l:2:0:
ast.h:47:3: error:   initializing argument 1 of 'variable::variable(int)' [-fpermissive]
   variable(int ty): tipo(ty) {};
   ^
In file included from lexer.l:2:0:
ast.h:632:39: error: no match for 'operator=' (operand types are 'std::map<std::basic_string<char>, variable>::mapped_type {aka variable}' and 'std::map<std::basic_string<char>, variable>')
     head_table->padre->valores[valor] = head_table->valores;
                                       ^
ast.h:632:39: note: candidate is:
In file included from lexer.l:2:0:
ast.h:44:7: note: variable& variable::operator=(const variable&)
 class variable { 
       ^
ast.h:44:7: note:   no known conversion for argument 1 from 'std::map<std::basic_string<char>, variable>' to 'const variable&'
In file included from lexer.l:2:0:
ast.h: In member function 'virtual void intr_robot::ejecutar()':
ast.h:693:40: error: 'std::map<std::basic_string<char>, variable>::mapped_type' has no member named 'valor'
      cout << head_table->valores["me"].valor << endl;
                                        ^
In file included from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\map:61:0,
                 from ast.h:16,
                 from lexer.l:2:
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\stl_map.h: In instantiation of 'std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::operator[](const key_type&) [with _Key = std::basic_string<char>; _Tp = variable; _Compare = std::less<std::basic_string<char> >; _Alloc = std::allocator<std::pair<const std::basic_string<char>, variable> >; std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type = variable; std::map<_Key, _Tp, _Compare, _Alloc>::key_type = std::basic_string<char>]':
ast.h:631:29:   required from here
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\stl_map.h:469:59: error: no matching function for call to 'variable::variable()'
           __i = insert(__i, value_type(__k, mapped_type()));
                                                           ^
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\stl_map.h:469:59: note: candidates are:
In file included from lexer.l:2:0:
ast.h:47:3: note: variable::variable(int)
   variable(int ty): tipo(ty) {};
   ^
ast.h:47:3: note:   candidate expects 1 argument, 0 provided
ast.h:44:7: note: variable::variable(const variable&)
 class variable { 
       ^
ast.h:44:7: note:   candidate expects 1 argument, 0 provided
In file included from parser.y:5:0:
ast.h: In member function 'virtual void identificador::add_variable(int, bool)':
ast.h:631:31: error: invalid user-defined conversion from 'variable**' to 'const variable&' [-fpermissive]
     head_table->valores["me"] = &temp;
                               ^
In file included from parser.y:5:0:
ast.h:47:3: note: candidate is: variable::variable(int) <near match>
   variable(int ty): tipo(ty) {};
   ^
ast.h:47:3: note:   no known conversion for argument 1 from 'variable**' to 'int'
In file included from parser.y:5:0:
ast.h:631:31: error: invalid conversion from 'variable**' to 'int' [-fpermissive]
     head_table->valores["me"] = &temp;
                               ^
In file included from parser.y:5:0:
ast.h:47:3: error:   initializing argument 1 of 'variable::variable(int)' [-fpermissive]
   variable(int ty): tipo(ty) {};
   ^
In file included from parser.y:5:0:
ast.h:632:39: error: no match for 'operator=' (operand types are 'std::map<std::basic_string<char>, variable>::mapped_type {aka variable}' and 'std::map<std::basic_string<char>, variable>')
     head_table->padre->valores[valor] = head_table->valores;
                                       ^
ast.h:632:39: note: candidate is:
In file included from parser.y:5:0:
ast.h:44:7: note: variable& variable::operator=(const variable&)
 class variable { 
       ^
ast.h:44:7: note:   no known conversion for argument 1 from 'std::map<std::basic_string<char>, variable>' to 'const variable&'
In file included from parser.y:5:0:
ast.h: In member function 'virtual void intr_robot::ejecutar()':
ast.h:693:40: error: 'std::map<std::basic_string<char>, variable>::mapped_type' has no member named 'valor'
      cout << head_table->valores["me"].valor << endl;
                                        ^
In file included from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\map:61:0,
                 from ast.h:16,
                 from parser.y:5:
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\stl_map.h: In instantiation of 'std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::operator[](const key_type&) [with _Key = std::basic_string<char>; _Tp = variable; _Compare = std::less<std::basic_string<char> >; _Alloc = std::allocator<std::pair<const std::basic_string<char>, variable> >; std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type = variable; std::map<_Key, _Tp, _Compare, _Alloc>::key_type = std::basic_string<char>]':
ast.h:631:29:   required from here
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\stl_map.h:469:59: error: no matching function for call to 'variable::variable()'
           __i = insert(__i, value_type(__k, mapped_type()));
                                                           ^
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\stl_map.h:469:59: note: candidates are:
In file included from parser.y:5:0:
ast.h:47:3: note: variable::variable(int)
   variable(int ty): tipo(ty) {};
   ^
ast.h:47:3: note:   candidate expects 1 argument, 0 provided
ast.h:44:7: note: variable::variable(const variable&)
 class variable { 
       ^
ast.h:44:7: note:   candidate expects 1 argument, 0 provided
In file included from ast.cpp:1:0:
ast.h: In member function 'virtual void identificador::add_variable(int, bool)':
ast.h:631:31: error: invalid user-defined conversion from 'variable**' to 'const variable&' [-fpermissive]
     head_table->valores["me"] = &temp;
                               ^
In file included from ast.cpp:1:0:
ast.h:47:3: note: candidate is: variable::variable(int) <near match>
   variable(int ty): tipo(ty) {};
   ^
ast.h:47:3: note:   no known conversion for argument 1 from 'variable**' to 'int'
In file included from ast.cpp:1:0:
ast.h:631:31: error: invalid conversion from 'variable**' to 'int' [-fpermissive]
     head_table->valores["me"] = &temp;
                               ^
In file included from ast.cpp:1:0:
ast.h:47:3: error:   initializing argument 1 of 'variable::variable(int)' [-fpermissive]
   variable(int ty): tipo(ty) {};
   ^
In file included from ast.cpp:1:0:
ast.h:632:39: error: no match for 'operator=' (operand types are 'std::map<std::basic_string<char>, variable>::mapped_type {aka variable}' and 'std::map<std::basic_string<char>, variable>')
     head_table->padre->valores[valor] = head_table->valores;
                                       ^
ast.h:632:39: note: candidate is:
In file included from ast.cpp:1:0:
ast.h:44:7: note: variable& variable::operator=(const variable&)
 class variable { 
       ^
ast.h:44:7: note:   no known conversion for argument 1 from 'std::map<std::basic_string<char>, variable>' to 'const variable&'
In file included from ast.cpp:1:0:
ast.h: In member function 'virtual void intr_robot::ejecutar()':
ast.h:693:40: error: 'std::map<std::basic_string<char>, variable>::mapped_type' has no member named 'valor'
      cout << head_table->valores["me"].valor << endl;
                                        ^
In file included from c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\map:61:0,
                 from ast.h:16,
                 from ast.cpp:1:
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\stl_map.h: In instantiation of 'std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::operator[](const key_type&) [with _Key = std::basic_string<char>; _Tp = variable; _Compare = std::less<std::basic_string<char> >; _Alloc = std::allocator<std::pair<const std::basic_string<char>, variable> >; std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type = variable; std::map<_Key, _Tp, _Compare, _Alloc>::key_type = std::basic_string<char>]':
ast.h:631:29:   required from here
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\stl_map.h:469:59: error: no matching function for call to 'variable::variable()'
           __i = insert(__i, value_type(__k, mapped_type()));
                                                           ^
c:\mingw\lib\gcc\mingw32\4.8.1\include\c++\bits\stl_map.h:469:59: note: candidates are:
In file included from ast.cpp:1:0:
ast.h:47:3: note: variable::variable(int)
   variable(int ty): tipo(ty) {};
   ^
ast.h:47:3: note:   candidate expects 1 argument, 0 provided
ast.h:44:7: note: variable::variable(const variable&)
 class variable { 
       ^
ast.h:44:7: note:   candidate expects 1 argument, 0 provided
makefile:2: recipe for target 'ContBot' failed
make: *** [ContBot] Error 1
